--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "./scripts/run-tests"
   },
   "author": "",
-  "license": "LGPL-2.0-or-later",
+  "license": "GPL-3.0-or-later",
   "dependencies": {
     "chevrotain": "^7.0.3"
-  },
+  }
 }
